--- a/Seance2.ipynb
+++ b/Seance2.ipynb
@@ -320,14 +320,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:2 y:5\n"
+      "x:2 y:5\n",
+      "x:6 y:11\n"
      ]
     }
    ],
@@ -344,10 +345,12 @@
     "        return \"x:\" + str(self.px) + \" y:\" + str(self.py)\n",
     "    \n",
     "    def __add__(self, o):\n",
-    "        return self.px + o.px\n",
+    "        return Vector2D(self.px + o.px, self.py + o.py)\n",
     "    \n",
-    "vector = Vector2D(2,5)\n",
-    "print(vector)"
+    "vector1 = Vector2D(2,5)\n",
+    "vector2 = Vector2D(4,6)\n",
+    "print(vector1)\n",
+    "print(vector1 + vector2)"
    ]
   },
   {
@@ -363,19 +366,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "mp_-JOPnoYVL"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 7]\n",
+      "[5, 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "class Base(object):\n",
-    "def pop(self):\n",
-    "pass\n",
-    "def push(self, elt):\n",
-    "pass"
+    "class Pile:\n",
+    "    def __init__(self):\n",
+    "        self.list = []\n",
+    "    def pop(self):\n",
+    "        self.list.pop()\n",
+    "    def push(self, e):\n",
+    "        self.list.append(e)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.list)\n",
+    "    \n",
+    "class File:\n",
+    "    def __init__(self):\n",
+    "        self.list = []\n",
+    "    def pop(self):\n",
+    "        self.list.pop(0)\n",
+    "    def push(self, e):\n",
+    "        self.list.append(e)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.list)\n",
+    "        \n",
+    "pile = Pile()\n",
+    "pile.push(5)\n",
+    "pile.push(6)\n",
+    "pile.push(7)\n",
+    "print(pile)\n",
+    "pile.pop()\n",
+    "print(pile)\n",
+    "\n"
    ]
   },
   {
